TFP-1859 endret hvordan saldo regnes, uttak starter på startdato for arbeidsforhold (#45)