@@ -1,7 +1,6 @@
 package no.nav.foreldrepenger.uttaksvilkår;
 
-import static no.nav.foreldrepenger.uttaksvilkår.FinnOppholdUtil.finnOppholdIPeriode;
-import static no.nav.foreldrepenger.uttaksvilkår.FinnOppholdUtil.lagOppholdPeriode;
+import static no.nav.foreldrepenger.uttaksvilkår.ManglendeSøktPeriodeUtil.lagManglendeSøktPeriode;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
@@ -16,7 +15,7 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.OppholdPeriode;
+import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.ManglendeSøktPeriode;
 import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.RegelGrunnlag;
 import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.Søknadstype;
 import no.nav.foreldrepenger.regler.uttak.fastsetteperiode.grunnlag.UttakPeriode;
@@ -27,54 +26,54 @@ import no.nav.foreldrepenger.regler.uttak.felles.grunnlag.Stønadskontotype;
 import no.nav.foreldrepenger.regler.uttak.konfig.Konfigurasjon;
 import no.nav.foreldrepenger.regler.uttak.konfig.Parametertype;
 
-class OppholdPeriodeTjeneste {
+class ManglendeSøktePerioderTjeneste {
 
-    private OppholdPeriodeTjeneste() {
+    private ManglendeSøktePerioderTjeneste() {
         // Skal ikke instansieres
     }
 
-    static List<OppholdPeriode> finnOppholdsperioder(RegelGrunnlag grunnlag, Konfigurasjon konfigurasjon) {
-        List<OppholdPeriode> ikkeSøktePerioderTilUkerForbeholdtMor = finnOppholdIUkerForbeholdtMor(grunnlag, konfigurasjon);
-        List<OppholdPeriode> ikkeSøktePerioderTilFarMedEneomsorg = finnIkkeSøktePerioderTilFarMedAleneomsorg(grunnlag);
-        List<OppholdPeriode> oppholdPerioder = finnOppholdISøktePerioderEtterUkerForbeholdtMorOgFastsattePerioderTilAnnenPart(grunnlag, ikkeSøktePerioderTilUkerForbeholdtMor);
-        oppholdPerioder.addAll(ikkeSøktePerioderTilFarMedEneomsorg);
-        oppholdPerioder.addAll(finnOppholdISøktePerioderVedAdopsjon(grunnlag));
+    static List<ManglendeSøktPeriode> finnManglendeSøktePerioder(RegelGrunnlag grunnlag, Konfigurasjon konfigurasjon) {
+        List<ManglendeSøktPeriode> perioderIUkerForbeholdtMor = finnManglendeSøktIUkerForbeholdtMor(grunnlag, konfigurasjon);
+        List<ManglendeSøktPeriode> perioderTilFarMedEneomsorg = finnManglendeSøktePerioderTilFarMedAleneomsorg(grunnlag);
+        List<ManglendeSøktPeriode> manglendeSøktePerioder = finnPerioderISøktePerioderEtterUkerForbeholdtMorOgFastsattePerioderTilAnnenPart(grunnlag, perioderIUkerForbeholdtMor);
+        manglendeSøktePerioder.addAll(perioderTilFarMedEneomsorg);
+        manglendeSøktePerioder.addAll(finnPerioderVedAdopsjon(grunnlag));
 
-        List<OppholdPeriode> samlet = new ArrayList<>(ikkeSøktePerioderTilUkerForbeholdtMor);
-        for (OppholdPeriode oppholdPeriode : oppholdPerioder) {
-            if (!contains(samlet, oppholdPeriode.getFom(), oppholdPeriode.getTom())) {
-                samlet.add(oppholdPeriode);
+        List<ManglendeSøktPeriode> samlet = new ArrayList<>(perioderIUkerForbeholdtMor);
+        for (ManglendeSøktPeriode msp : manglendeSøktePerioder) {
+            if (!contains(samlet, msp.getFom(), msp.getTom())) {
+                samlet.add(msp);
             }
         }
 
         return samlet.stream()
-                .map(OppholdPeriodeTjeneste::fjernHelgFraBegynnelseOgSlutt).filter(Optional::isPresent).map(Optional::get)
+                .map(ManglendeSøktePerioderTjeneste::fjernHelgFraBegynnelseOgSlutt).filter(Optional::isPresent).map(Optional::get)
                 .map(p -> fjernPerioderFørSkjæringstidspunktOpptjening(p, grunnlag)).filter(Optional::isPresent).map(Optional::get)
                 .map(p -> fjernPerioderFørEndringsdatoVedRevurdering(p, grunnlag)).filter(Optional::isPresent).map(Optional::get)
                 .sorted(Comparator.comparing(Periode::getFom))
                 .collect(Collectors.toList());
     }
 
-    private static boolean contains(List<OppholdPeriode> list, LocalDate fom, LocalDate tom) {
+    private static boolean contains(List<ManglendeSøktPeriode> list, LocalDate fom, LocalDate tom) {
         return list.stream().anyMatch(item -> item.getFom().isEqual(fom) && item.getTom().isEqual(tom));
     }
 
-    private static List<OppholdPeriode> finnOppholdISøktePerioderVedAdopsjon(RegelGrunnlag grunnlag) {
+    private static List<ManglendeSøktPeriode> finnPerioderVedAdopsjon(RegelGrunnlag grunnlag) {
         if (Søknadstype.ADOPSJON.equals(grunnlag.getSøknad().getType())) {
-            Optional<OppholdPeriode> oppholdAdopsjon = utledOppholdVedAdopsjon(grunnlag);
-            if (oppholdAdopsjon.isPresent()) {
-                return Collections.singletonList(oppholdAdopsjon.get());
+            Optional<ManglendeSøktPeriode> mspAdopsjon = utledManglendeSøktVedAdopsjon(grunnlag);
+            if (mspAdopsjon.isPresent()) {
+                return Collections.singletonList(mspAdopsjon.get());
             }
         }
         return Collections.emptyList();
     }
 
-    private static List<OppholdPeriode> finnOppholdIUkerForbeholdtMor(RegelGrunnlag grunnlag, Konfigurasjon konfigurasjon) {
+    private static List<ManglendeSøktPeriode> finnManglendeSøktIUkerForbeholdtMor(RegelGrunnlag grunnlag, Konfigurasjon konfigurasjon) {
         if (grunnlag.getBehandling().isSøkerMor() && Søknadstype.FØDSEL.equals(grunnlag.getSøknad().getType())) {
-            return utledOppholdForMorFraOppgittePerioder(grunnlag, konfigurasjon);
+            return utledManglendeForMorFraOppgittePerioder(grunnlag, konfigurasjon);
         }
         if (farSøkerFødselEllerTerminOgBareFarHarRett(grunnlag) && !grunnlag.getRettOgOmsorg().getAleneomsorg()) {
-            Optional<OppholdPeriode> oppholdFar = utledOppholdForFar(grunnlag.getDatoer().getFamiliehendelse(), grunnlag.getSøknad().getUttaksperioder(), konfigurasjon);
+            Optional<ManglendeSøktPeriode> oppholdFar = utledManglendeSøktForFar(grunnlag.getDatoer().getFamiliehendelse(), grunnlag.getSøknad().getUttaksperioder(), konfigurasjon);
             if (oppholdFar.isPresent()) {
                 return Collections.singletonList(oppholdFar.get());
             }
@@ -82,18 +81,18 @@ class OppholdPeriodeTjeneste {
         return Collections.emptyList();
     }
 
-    private static List<OppholdPeriode> finnIkkeSøktePerioderTilFarMedAleneomsorg(RegelGrunnlag grunnlag) {
+    private static List<ManglendeSøktPeriode> finnManglendeSøktePerioderTilFarMedAleneomsorg(RegelGrunnlag grunnlag) {
         if (!grunnlag.getBehandling().isSøkerMor() && grunnlag.getRettOgOmsorg().getAleneomsorg()) {
             UttakPeriode førstePeriode = grunnlag.getSøknad().getUttaksperioder().get(0);
             if (grunnlag.getDatoer().getFamiliehendelse().isBefore(førstePeriode.getFom())) {
-                OppholdPeriode nyPeriode = lagOppholdPeriode(grunnlag.getDatoer().getFamiliehendelse(), førstePeriode.getFom().minusDays(1), Stønadskontotype.FORELDREPENGER);
-                return Collections.singletonList(nyPeriode);
+                ManglendeSøktPeriode nyPeriode = lagManglendeSøktPeriode(grunnlag.getDatoer().getFamiliehendelse(), førstePeriode.getFom().minusDays(1), Stønadskontotype.FORELDREPENGER);
+                return List.of(nyPeriode);
             }
         }
         return Collections.emptyList();
     }
 
-    private static Optional<OppholdPeriode> utledOppholdVedAdopsjon(RegelGrunnlag grunnlag) {
+    private static Optional<ManglendeSøktPeriode> utledManglendeSøktVedAdopsjon(RegelGrunnlag grunnlag) {
         LocalDate senesteLovligeStartdatoVedAdopsjon = utledSenesteLovligeStartdatoVedAdopsjon(grunnlag);
 
         var førsteUttaksdatoSøknad = førsteUttaksdatoSøknad(grunnlag);
@@ -106,7 +105,7 @@ class OppholdPeriodeTjeneste {
             } else {
                 tom = førsteUttaksdatoAnnenpart.get().minusDays(1);
             }
-            return Optional.of(lagOppholdPeriode(senesteLovligeStartdatoVedAdopsjon, tom));
+            return Optional.of(lagManglendeSøktPeriode(senesteLovligeStartdatoVedAdopsjon, tom));
         }
         return Optional.empty();
     }
@@ -133,11 +132,11 @@ class OppholdPeriodeTjeneste {
         return omsorgsovertakelseDato;
     }
 
-    private static Optional<OppholdPeriode> utledOppholdForFar(LocalDate familiehendelse, List<UttakPeriode> uttaksperioder, Konfigurasjon konfigurasjon) {
-        UttakPeriode førstePeriode = uttaksperioder.get(0);
-        int ukerForbeholdtMor = konfigurasjon.getParameter(Parametertype.UTTAK_MØDREKVOTE_ETTER_FØDSEL_UKER, familiehendelse);
+    private static Optional<ManglendeSøktPeriode> utledManglendeSøktForFar(LocalDate familiehendelse, List<UttakPeriode> uttaksperioder, Konfigurasjon konfigurasjon) {
+        var førstePeriode = uttaksperioder.get(0);
+        var ukerForbeholdtMor = konfigurasjon.getParameter(Parametertype.UTTAK_MØDREKVOTE_ETTER_FØDSEL_UKER, familiehendelse);
         if (familiehendelse.plusWeeks(ukerForbeholdtMor).isBefore(førstePeriode.getFom())) {
-            OppholdPeriode nyPeriode = lagOppholdPeriode(familiehendelse.plusWeeks(ukerForbeholdtMor), førstePeriode.getFom().minusDays(1), Stønadskontotype.FORELDREPENGER);
+            var nyPeriode = lagManglendeSøktPeriode(familiehendelse.plusWeeks(ukerForbeholdtMor), førstePeriode.getFom().minusDays(1), Stønadskontotype.FORELDREPENGER);
             return Optional.of(nyPeriode);
         }
         return Optional.empty();
@@ -155,82 +154,82 @@ class OppholdPeriodeTjeneste {
         return grunnlag.getRettOgOmsorg().getFarHarRett() && !grunnlag.getRettOgOmsorg().getMorHarRett();
     }
 
-    private static List<OppholdPeriode> utledOppholdForMorFraOppgittePerioder(RegelGrunnlag grunnlag, Konfigurasjon konfigurasjon) {
+    private static List<ManglendeSøktPeriode> utledManglendeForMorFraOppgittePerioder(RegelGrunnlag grunnlag, Konfigurasjon konfigurasjon) {
         LocalDate familiehendelseDato = grunnlag.getDatoer().getFamiliehendelse();
         List<LukketPeriode> uttakPerioder = slåSammenUttakForBeggeParter(grunnlag).stream().sorted(Comparator.comparing(Periode::getFom)).collect(Collectors.toList());
-        List<OppholdPeriode> oppholdFørFødsel = finnOppholdFørFødsel(uttakPerioder, familiehendelseDato, grunnlag.getSøknad().getType(),
+        List<ManglendeSøktPeriode> mspFørFødsel = finnManglendeSøktFørFødsel(uttakPerioder, familiehendelseDato, grunnlag.getSøknad().getType(),
                 grunnlag.getGyldigeStønadskontotyper(), konfigurasjon);
-        List<OppholdPeriode> oppholdEtterFødsel = finnOppholdEtterFødsel(uttakPerioder, familiehendelseDato, grunnlag.getGyldigeStønadskontotyper(), konfigurasjon);
+        List<ManglendeSøktPeriode> mspEtterFødsel = finnPerioderEtterFødsel(uttakPerioder, familiehendelseDato, grunnlag.getGyldigeStønadskontotyper(), konfigurasjon);
 
-        return Stream.of(oppholdFørFødsel, oppholdEtterFødsel)
+        return Stream.of(mspFørFødsel, mspEtterFødsel)
                 .flatMap(Collection::stream)
-                .map(OppholdPeriodeTjeneste::fjernHelgFraBegynnelseOgSlutt).filter(Optional::isPresent).map(Optional::get)
+                .map(ManglendeSøktePerioderTjeneste::fjernHelgFraBegynnelseOgSlutt).filter(Optional::isPresent).map(Optional::get)
                 .collect(Collectors.toList());
     }
 
-    private static Optional<OppholdPeriode> fjernPerioderFørEndringsdatoVedRevurdering(OppholdPeriode oppholdsperiode, RegelGrunnlag grunnlag) {
+    private static Optional<ManglendeSøktPeriode> fjernPerioderFørEndringsdatoVedRevurdering(ManglendeSøktPeriode msp, RegelGrunnlag grunnlag) {
         if (!grunnlag.erRevurdering()) {
-            return Optional.of(oppholdsperiode);
+            return Optional.of(msp);
         }
         LocalDate endringsdato = grunnlag.getRevurdering().getEndringsdato();
-        return fjernPerioderFørDato(oppholdsperiode, endringsdato);
+        return fjernPerioderFørDato(msp, endringsdato);
     }
 
-    private static Optional<OppholdPeriode> fjernPerioderFørSkjæringstidspunktOpptjening(OppholdPeriode oppholdsperiode, RegelGrunnlag grunnlag) {
+    private static Optional<ManglendeSøktPeriode> fjernPerioderFørSkjæringstidspunktOpptjening(ManglendeSøktPeriode msp, RegelGrunnlag grunnlag) {
         LocalDate skjæringstidspunkt = grunnlag.getOpptjening().getSkjæringstidspunkt();
         // Skal ikke fjerne periode før skjæringstidspunkt for far med aleneomsorg eller enerett (fødsel eller adopsjon)
         if ((farSøkerFødselEllerTerminOgBareFarHarRett(grunnlag) || (!grunnlag.getBehandling().isSøkerMor() && (grunnlag.getRettOgOmsorg().getAleneomsorg()))
-            && skjæringstidspunkt.isAfter(grunnlag.getDatoer().getFamiliehendelse()))) {
-            return Optional.of(oppholdsperiode);
+                && skjæringstidspunkt.isAfter(grunnlag.getDatoer().getFamiliehendelse()))) {
+            return Optional.of(msp);
         }
-        return fjernPerioderFørDato(oppholdsperiode, skjæringstidspunkt);
+        return fjernPerioderFørDato(msp, skjæringstidspunkt);
     }
 
-    private static Optional<OppholdPeriode> fjernPerioderFørDato(OppholdPeriode oppholdsperiode, LocalDate dato) {
-        if (oppholdsperiode.getTom().isBefore(dato)) {
+    private static Optional<ManglendeSøktPeriode> fjernPerioderFørDato(ManglendeSøktPeriode msp, LocalDate dato) {
+        if (msp.getTom().isBefore(dato)) {
             return Optional.empty();
         }
-        if (oppholdsperiode.overlapper(dato)) {
-            return Optional.of(oppholdsperiode.kopiMedNyPeriode(dato, oppholdsperiode.getTom()));
+        if (msp.overlapper(dato)) {
+            return Optional.of(msp.kopiMedNyPeriode(dato, msp.getTom()));
         }
-        return Optional.of(oppholdsperiode);
+        return Optional.of(msp);
     }
 
     private static boolean farSøkerFødselEllerTerminOgBareFarHarRett(RegelGrunnlag grunnlag) {
         return farSøkerFødselEllerTermin(grunnlag) && bareFarRett(grunnlag);
     }
 
-    private static List<OppholdPeriode> finnOppholdISøktePerioderEtterUkerForbeholdtMorOgFastsattePerioderTilAnnenPart(RegelGrunnlag grunnlag,
-                                                                                                                       List<OppholdPeriode> ikkeSøktePerioder) {
+    private static List<ManglendeSøktPeriode> finnPerioderISøktePerioderEtterUkerForbeholdtMorOgFastsattePerioderTilAnnenPart(RegelGrunnlag grunnlag,
+                                                                                                                              List<ManglendeSøktPeriode> perioderIUkerForbeholdtMor) {
         List<LukketPeriode> allePerioder = slåSammenUttakForBeggeParter(grunnlag);
         //legge inn ikke søkte perioder til uker som er Forbeholdt til Mor etter fødsel
-        allePerioder.addAll(ikkeSøktePerioder);
-        List<OppholdPeriode> oppholdPerioder = finnOppholdIPerioderEtterUkerForbeholdtMorEtterFødsel(allePerioder);
-        return oppholdPerioder.stream()
-                .map(OppholdPeriodeTjeneste::fjernHelgFraBegynnelseOgSlutt).filter(Optional::isPresent).map(Optional::get)
+        allePerioder.addAll(perioderIUkerForbeholdtMor);
+        return finnPerioderIPerioderEtterUkerForbeholdtMorEtterFødsel(allePerioder)
+                .stream()
+                .map(ManglendeSøktePerioderTjeneste::fjernHelgFraBegynnelseOgSlutt).filter(Optional::isPresent).map(Optional::get)
                 .collect(Collectors.toList());
     }
 
-    private static List<OppholdPeriode> finnOppholdIPerioderEtterUkerForbeholdtMorEtterFødsel(List<LukketPeriode> perioder) {
+    private static List<ManglendeSøktPeriode> finnPerioderIPerioderEtterUkerForbeholdtMorEtterFødsel(List<LukketPeriode> perioder) {
         List<LukketPeriode> sortertePerioder = perioder.stream()
                 .sorted(Comparator.comparing(LukketPeriode::getFom)).collect(Collectors.toList());
 
-        List<OppholdPeriode> oppholdPerioder = new ArrayList<>();
-        LocalDate oppholdFom = null;
+        List<ManglendeSøktPeriode> manglendeSøktePerioder = new ArrayList<>();
+        LocalDate mspFom = null;
         for (LukketPeriode lukketPeriode : sortertePerioder) {
-            if (oppholdFom == null) {
-                oppholdFom = lukketPeriode.getTom().plusDays(1);
-            } else if (oppholdFom.isBefore(lukketPeriode.getFom())) {
-                LocalDate oppholdTom = lukketPeriode.getFom().minusDays(1);
-                if (Virkedager.beregnAntallVirkedager(oppholdFom, oppholdTom) > 0) {
-                    oppholdPerioder.add(lagOppholdPeriode(oppholdFom, oppholdTom));
+            if (mspFom == null) {
+                mspFom = lukketPeriode.getTom().plusDays(1);
+            } else if (mspFom.isBefore(lukketPeriode.getFom())) {
+                LocalDate mspTom = lukketPeriode.getFom().minusDays(1);
+                if (Virkedager.beregnAntallVirkedager(mspFom, mspTom) > 0) {
+                    manglendeSøktePerioder.add(lagManglendeSøktPeriode(mspFom, mspTom));
                 }
             }
-            if (!lukketPeriode.getTom().isBefore(oppholdFom)) {
-                oppholdFom = lukketPeriode.getTom().plusDays(1);
+            if (!lukketPeriode.getTom().isBefore(mspFom)) {
+                mspFom = lukketPeriode.getTom().plusDays(1);
             }
         }
-        return oppholdPerioder;
+        return manglendeSøktePerioder;
     }
 
     private static List<LukketPeriode> slåSammenUttakForBeggeParter(RegelGrunnlag grunnlag) {
@@ -243,81 +242,80 @@ class OppholdPeriodeTjeneste {
     }
 
 
-    private static List<OppholdPeriode> finnOppholdFørFødsel(List<LukketPeriode> søktePerioder,
-                                                             LocalDate familiehendelseDato,
-                                                             Søknadstype søknadstype,
-                                                             Set<Stønadskontotype> gyldigeStønadskontotyper,
-                                                             Konfigurasjon konfigurasjon) {
+    private static List<ManglendeSøktPeriode> finnManglendeSøktFørFødsel(List<LukketPeriode> søktePerioder,
+                                                                         LocalDate familiehendelseDato,
+                                                                         Søknadstype søknadstype,
+                                                                         Set<Stønadskontotype> gyldigeStønadskontotyper,
+                                                                         Konfigurasjon konfigurasjon) {
         if (Søknadstype.ADOPSJON.equals(søknadstype)) {
             return new ArrayList<>();
         }
         int fellesperiodeFørFødselUker = konfigurasjon.getParameter(Parametertype.UTTAK_FELLESPERIODE_FØR_FØDSEL_UKER, familiehendelseDato);
         LukketPeriode betingetPeriodeFørFødsel = new LukketPeriode(familiehendelseDato.minusWeeks(fellesperiodeFørFødselUker), familiehendelseDato.minusDays(1));
 
-        List<OppholdPeriode> oppholdFørFødsel = finnOppholdIPeriode(søktePerioder, betingetPeriodeFørFødsel).stream()
-                .map(opphold -> lagOppholdPeriode(opphold.getFom(), opphold.getTom(), Stønadskontotype.FORELDREPENGER_FØR_FØDSEL))
+        List<ManglendeSøktPeriode> mspFørFødsel = ManglendeSøktPeriodeUtil.finnManglendeSøktePerioder(søktePerioder, betingetPeriodeFørFødsel).stream()
+                .map(msp -> lagManglendeSøktPeriode(msp.getFom(), msp.getTom(), Stønadskontotype.FORELDREPENGER_FØR_FØDSEL))
                 .collect(Collectors.toList());
 
-        List<OppholdPeriode> oppholdForFellesperiodeFørFødsel = new ArrayList<>();
+        List<ManglendeSøktPeriode> mspForFellesperiodeFørFødsel = new ArrayList<>();
 
         if (!søktePerioder.isEmpty()) {
-            søktePerioder.sort((p1, p2) -> p2.getFom().isAfter(p1.getFom()) ? -1 : 1);
+            søktePerioder.sort(Comparator.comparing(Periode::getFom));
 
             if (søktePerioder.get(0).getFom().isBefore(familiehendelseDato.minusWeeks(fellesperiodeFørFødselUker))) {
 
                 LukketPeriode betingetFellesperiodeFørFødsel = new LukketPeriode(søktePerioder.get(0).getFom(), familiehendelseDato.minusWeeks(fellesperiodeFørFødselUker).minusDays(1));
-                oppholdForFellesperiodeFørFødsel = finnOppholdIPeriode(søktePerioder, betingetFellesperiodeFørFødsel).stream()
-                        .map(opphold -> {
+                mspForFellesperiodeFørFødsel = ManglendeSøktPeriodeUtil.finnManglendeSøktePerioder(søktePerioder, betingetFellesperiodeFørFødsel).stream()
+                        .map(msp -> {
                             Stønadskontotype type = gyldigeStønadskontotyper.contains(Stønadskontotype.FELLESPERIODE) ? Stønadskontotype.FELLESPERIODE : Stønadskontotype.FORELDREPENGER;
-                            return lagOppholdPeriode(opphold.getFom(), opphold.getTom(), type);
+                            return lagManglendeSøktPeriode(msp.getFom(), msp.getTom(), type);
                         })
                         .collect(Collectors.toList());
             }
         }
-        return Stream.of(oppholdForFellesperiodeFørFødsel, oppholdFørFødsel)
+        return Stream.of(mspForFellesperiodeFørFødsel, mspFørFødsel)
                 .flatMap(Collection::stream)
                 .filter(p -> p.virkedager() > 0)
                 .collect(Collectors.toList());
     }
 
 
-    private static List<OppholdPeriode> finnOppholdEtterFødsel(List<LukketPeriode> søktePerioder,
-                                                               LocalDate familiehendelseDato,
-                                                               Set<Stønadskontotype> gyldigeStønadskontotyper,
-                                                               Konfigurasjon konfigurasjon) {
+    private static List<ManglendeSøktPeriode> finnPerioderEtterFødsel(List<LukketPeriode> søktePerioder,
+                                                                      LocalDate familiehendelseDato,
+                                                                      Set<Stønadskontotype> gyldigeStønadskontotyper,
+                                                                      Konfigurasjon konfigurasjon) {
         int mødrekvoteEtterFødselUker = konfigurasjon.getParameter(Parametertype.UTTAK_MØDREKVOTE_ETTER_FØDSEL_UKER, familiehendelseDato);
         LukketPeriode betingetPeriodeEtterFødsel = new LukketPeriode(familiehendelseDato, familiehendelseDato.plusWeeks(mødrekvoteEtterFødselUker).minusDays(1));
         Stønadskontotype stønadskontotype = gyldigeStønadskontotyper.contains(Stønadskontotype.MØDREKVOTE) ? Stønadskontotype.MØDREKVOTE : Stønadskontotype.FORELDREPENGER;
-        return finnOppholdIPeriode(søktePerioder, betingetPeriodeEtterFødsel).stream()
-                .map(opphold -> lagOppholdPeriode(opphold.getFom(), opphold.getTom(), stønadskontotype))
+        return ManglendeSøktPeriodeUtil.finnManglendeSøktePerioder(søktePerioder, betingetPeriodeEtterFødsel).stream()
+                .map(msp -> lagManglendeSøktPeriode(msp.getFom(), msp.getTom(), stønadskontotype))
                 .collect(Collectors.toList());
     }
 
 
     /**
-     * Fjern helgedager i begynnelse og slutt av oppholdsperiode.
+     * Fjern helgedager i begynnelse og slutt av msp.
      *
-     * @param oppholdPeriode perioder som skal strippes.
-     *
+     * @param msp perioder som skal strippes.
      * @return periode uten helg i begynnelsen og slutten. Optional.empty() dersom perioden bare besto av helgedager.
      */
-    private static Optional<OppholdPeriode> fjernHelgFraBegynnelseOgSlutt(OppholdPeriode oppholdPeriode) {
+    private static Optional<ManglendeSøktPeriode> fjernHelgFraBegynnelseOgSlutt(ManglendeSøktPeriode msp) {
         Predicate<LocalDate> sjekkOmHelg = dato -> dato.getDayOfWeek().equals(DayOfWeek.SATURDAY) || dato.getDayOfWeek().equals(DayOfWeek.SUNDAY);
 
-        LocalDate fom = oppholdPeriode.getFom();
-        LocalDate tom = oppholdPeriode.getTom();
+        LocalDate fom = msp.getFom();
+        LocalDate tom = msp.getTom();
 
-        while(sjekkOmHelg.test(fom)) {
+        while (sjekkOmHelg.test(fom)) {
             fom = fom.plusDays(1);
         }
-        while(sjekkOmHelg.test(tom)) {
+        while (sjekkOmHelg.test(tom)) {
             tom = tom.minusDays(1);
         }
 
         if (fom.isAfter(tom)) {
             return Optional.empty();
         }
-        return Optional.of(oppholdPeriode.kopiMedNyPeriode(fom, tom));
+        return Optional.of(msp.kopiMedNyPeriode(fom, tom));
     }
 
 }
